readme and english interface

--- a/web/src/app/method-actions/method-actions.component.html
+++ b/web/src/app/method-actions/method-actions.component.html
@@ -31,7 +31,7 @@
               class="close-btn liner"
               *ngIf="multiform || methods.length > 1"
               (click)="close(methodForm)">
-        Закрыть
+        Close
       </button>
   </div>
 </div>
